--- a/HmiPro/Views/DMes/CpmDetailView.xaml
+++ b/HmiPro/Views/DMes/CpmDetailView.xaml
@@ -33,7 +33,7 @@
                         />
                     </dxg:GridControl.View>
                     <dxg:GridControl.Columns>
-                        <dxg:GridColumn FieldName="Name" Width="2*"   Header="参数" />
+                        <dxg:GridColumn FieldName="Name" Width="1.5*"   Header="参数" />
                         <dxg:GridColumn FieldName="Value" Width="*" Header="值"/>
                         <!--<dxg:GridColumn FieldName="PickTime"  Width="1*" Header="时间"  >
                             <dxg:GridColumn.EditSettings>
@@ -54,7 +54,7 @@
                 Padding="0"
                 IsHitTestVisible="False">
                     <dxc:ChartControl.Titles>
-                        <dxc:Title HorizontalAlignment="Center" Margin="200,-25,0,0" Content="{Binding Path=ViewStore.SelectedPointNums}" FontSize="16" VerticalAlignment="Top" Dock="Bottom">
+                        <dxc:Title HorizontalAlignment="Center" Margin="300,-25,0,0" Content="{Binding Path=ViewStore.SelectedPointNums}" FontSize="16" VerticalAlignment="Top" Dock="Bottom">
 
                         </dxc:Title>
                     </dxc:ChartControl.Titles>
@@ -64,7 +64,7 @@
                         VerticalPosition="TopOutside"
                         Orientation="Horizontal" />
                     </dxc:ChartControl.Legend>
-                    <dxc:XYDiagram2D Background="Transparent">
+                    <dxc:XYDiagram2D Background="Transparent" EnableAxisXNavigation="True">
                         <dxc:XYDiagram2D.AxisX >
                             <dxc:AxisX2D  Brush="LightGreen">
                                 <dxc:AxisX2D.DateTimeScaleOptions>
@@ -81,6 +81,12 @@
                                 <dxc:AxisX2D.WholeRange>
                                     <dxc:Range AutoSideMargins="True" />
                                 </dxc:AxisX2D.WholeRange>
+                                <dxc:AxisX2D.VisualRange>
+                                    <dxc:Range />
+                                </dxc:AxisX2D.VisualRange>
+                                <dxc:AxisX2D.NumericScaleOptions>
+                                    <dxc:ContinuousNumericScaleOptions />
+                                </dxc:AxisX2D.NumericScaleOptions>
                             </dxc:AxisX2D>
                         </dxc:XYDiagram2D.AxisX>
                         <dxc:XYDiagram2D.AxisY>
