--- a/HmiPro/Views/DMes/DMesCoreView.xaml
+++ b/HmiPro/Views/DMes/DMesCoreView.xaml
@@ -49,7 +49,7 @@
                                 }">
                                     <Run Text="{Binding Path=Name}"/>
                                     <Run Text=":" />
-                                    <Run  Text="{Binding Path=Value}"  Style="{StaticResource CpmInstantValue}"/>
+                                    <Run  Text="{Binding Path=Value,StringFormat=F2}"  Style="{StaticResource CpmInstantValue}" />
                                     <Run Text="{Binding Path=Unit}"/>
                                     </TextBlock>
                                 </DataTemplate>
