--- a/HmiPro/Views/Dx/LoadingWindow.xaml
+++ b/HmiPro/Views/Dx/LoadingWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:dx="clr-namespace:HmiPro.Views.Dx"
         mc:Ignorable="d"
         WindowStyle="None" ResizeMode="NoResize" SizeToContent="WidthAndHeight"
-        AllowsTransparency="True"  Background="Transparent"  ShowInTaskbar="False" Topmost="True"
+        AllowsTransparency="True"  Background="Black"  ShowInTaskbar="False" Topmost="True"
     >
     <dx:LoadingView Background="Transparent"/>
 </Window>
