--- a/HmiPro/Views/Sys/TestView.xaml
+++ b/HmiPro/Views/Sys/TestView.xaml
@@ -33,7 +33,10 @@
                 <Button Content="显示任务栏" Height="50" Width="200" Command="{Binding Path=ShowTaskBarCommand}"  ></Button>
                 <Button Content="弹出任务管理器" Height="50" Width="200" Command="{Binding Path=ShowTaskMgmrCommand}"  ></Button>
                 <Button Content="弹出日志文件夹" Height="50" Width="200" Command="{Binding Path=ShowLogFolerCommand}"  ></Button>
+                <Button Content="关闭Loading1" Height="50" Width="200" Command="{Binding Path=CloseLoadingSplashCommand1}"  ></Button>
+                <Button Content="关闭Loading2" Height="50" Width="200" Command="{Binding Path=CloseLoadingSplashCommand2}"  ></Button>
                 <Button Content="关闭软件" Height="50" Width="200" Command="{Binding Path=CloseAppCommand}"  ></Button>
+                <Button Content="关闭电脑" Height="50" Width="200" Command="{Binding Path=ClosePcCommand}"  ></Button>
                 <Button Content="检查更新" Height="50" Width="200" Command="{Binding Path=CheckUpdateCommand}"  ></Button>
             </dxlc:FlowLayoutControl>
         </Grid>
