--- a/HmiPro/DxWindow.xaml
+++ b/HmiPro/DxWindow.xaml
@@ -45,8 +45,8 @@
         </dx:DialogService>
         <dxmvvm:NotificationService x:Name="AppNotificationService" UseWin8NotificationsIfAvailable="False" PredefinedNotificationDuration="Long" PredefinedNotificationTemplate="ShortHeaderAndTwoTextFields"   />
         <dxmvvm:DispatcherService />
-        <navigation:FrameNavigationService Frame="{Binding ElementName=frame}"  />
-        <dx:DXSplashScreenService SplashScreenType="{x:Type View:LoadingWindow}" />
+        <navigation:FrameNavigationService Frame="{Binding ElementName=frame}" ShowSplashScreen="False"  />
+        <dx:DXSplashScreenService SplashScreenType="{x:Type View:LoadingWindow}" SplashScreenStartupLocation="CenterOwner"/>
     </dxmvvm:Interaction.Behaviors>
     <Grid Margin="0" Background="Transparent">
         <Grid.RowDefinitions>
@@ -65,9 +65,7 @@
         <Border Grid.Row="1" Height="{Binding Path=MarqueeHiehgit}" Background="Red" Visibility="{Binding Path=MarqueeVisibility}">
             <controls:MarqueeTextControl Height="28"  MarqueeTimeInSeconds="10" MarqueeType="RightToLeft"  ContentFontSize="22"  ContentText="{Binding Path=MarqueeText}" Foreground="White"></controls:MarqueeTextControl>
         </Border>
-        <dxwui:NavigationFrame  Grid.Row="2"  x:Name="frame" AnimationType="SlideHorizontal" BackNavigationMode="Root" >
-
-        </dxwui:NavigationFrame>
+        <dxwui:NavigationFrame  Grid.Row="2"  x:Name="frame" BackNavigationMode="Root" />
     </Grid>
 
 </dx:DXWindow>
