--- a/HmiPro/Views/DMes/GrafanaView.xaml
+++ b/HmiPro/Views/DMes/GrafanaView.xaml
@@ -9,6 +9,10 @@
              mc:Ignorable="d"
              DataContext="{dxmvvm:ViewModelSource Type=dMes:GrafanaViewModel}"
              d:DesignHeight="300" d:DesignWidth="300">
+    <dxmvvm:Interaction.Behaviors>
+        <dxmvvm:DispatcherService />
+        <dxmvvm:EventToCommand EventName="Loaded" Command="{Binding OnLoadedCommand}"/>
+    </dxmvvm:Interaction.Behaviors>
 
     <dxwui:PageAdornerControl FontSize="10" Margin="0,0,0,0" Header="实时曲线" >
         <WebBrowser Name="WebBrowser" Margin="0,35,0,0"  />
