--- a/HmiPro/Views/Sys/FormView.xaml
+++ b/HmiPro/Views/Sys/FormView.xaml
@@ -13,6 +13,7 @@
               Background="Transparent"
              d:DesignHeight="600" d:DesignWidth="800">
     <dxmvvm:Interaction.Behaviors>
+        <dxmvvm:EventToCommand EventName="Loaded" Command="{Binding OnLoadedCommand}"/>
         <dxmvvm:ApplicationJumpListService />
     </dxmvvm:Interaction.Behaviors>
     <Grid MinWidth="840" >
