--- a/HmiPro/Views/HomeView.xaml
+++ b/HmiPro/Views/HomeView.xaml
@@ -41,20 +41,14 @@
                 <dxlc:Tile Header="呼叫管理" Style="{StaticResource HorizontalTile}" Background="#00b8d4"  Command="{Binding NavigateCommand}" CommandParameter="MqCallView">
                     <BitmapImage UriSource="{Binding Assets.IconCall}" />
                 </dxlc:Tile>
-                <!--<dxlc:Tile Header="任务管理"  Style="{StaticResource HorizontalTile}" Background="#009688"  Command="{Binding NavigateCommand}" CommandParameter="SystemSettingViewDev" Margin="643,-480,-643,480">
-                    <BitmapImage UriSource="{Binding Assets.IconTask}" />
-                </dxlc:Tile>-->
-                <!--<dxlc:Tile Header="设置"  Style="{StaticResource HorizontalTile}" Background="#509688"  Command="{Binding JumpAppSettingViewCommand}" CommandParameter="设置程序信息">
-                    <BitmapImage UriSource="{Binding Assets.IconSetting2}" />
-                </dxlc:Tile>-->
-                <!--dxlc:Tile Header="质量检测"  Style="{StaticResource HorizontalTile}" Background="#009608"  Command="{Binding NavigateCommand}" CommandParameter="McQualityCheckView" >
-                    <BitmapImage UriSource="{Binding Assets.IconQualityControl}" />
-                </>-->
                 <dxlc:Tile Header="设置"  Style="{StaticResource HorizontalTile}" Visibility="{Binding Path=SettingViewVisibility}" Background="#509688"  Command="{Binding JumpAppSettingViewCommand}" CommandParameter="设置程序信息">
                     <BitmapImage UriSource="{Binding Assets.IconSetting2}" />
                 </dxlc:Tile>
                 <dxlc:Tile Header="实时曲线"  Style="{StaticResource HorizontalTile}" Background="#509688"  Command="{Binding NavigateCommand}" CommandParameter="GrafanaView">
                     <BitmapImage UriSource="{Binding Assets.IconMonitor2}" />
+                </dxlc:Tile>
+                <dxlc:Tile Header="上班管理"  Style="{StaticResource HorizontalTile}" Background="#509688"  Command="{Binding NavigateCommand}" CommandParameter="WorkMgmtView">
+                    <BitmapImage UriSource="{Binding Assets.IconWorker}" />
                 </dxlc:Tile>
                 <dxlc:Tile Header="系统管理"  Style="{StaticResource HorizontalTile}"  Background="#087688"  Command="{Binding NavigateCommand}" CommandParameter="TestView">
                     <BitmapImage UriSource="{Binding Assets.IconPrivacy}" />
