--- a/HmiPro/Views/Func/WorkMgmtView.xaml
+++ b/HmiPro/Views/Func/WorkMgmtView.xaml
@@ -48,15 +48,15 @@
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <StackPanel VerticalAlignment="Top">
-                        <TextBlock Text="姓名:" Foreground="#FF808080" FontSize="13"/>
+                        <TextBlock Text="姓名:" Foreground="#FF808080" FontSize="15"/>
                         <TextBlock Text="{Binding Path=DataContext.Name}" />
                     </StackPanel>
                     <StackPanel Grid.Row="1" VerticalAlignment="Top">
-                        <TextBlock Text="电话:" Foreground="#FF808080" FontSize="13"/>
-                        <TextBlock Text="{Binding Path=DataContext.Phone}" TextTrimming="CharacterEllipsis" />
+                        <TextBlock Text="机台:" Foreground="#FF808080" FontSize="15"/>
+                        <TextBlock Text="{Binding Path=DataContext.MachineCode}" TextTrimming="CharacterEllipsis" />
                     </StackPanel>
                     <StackPanel Grid.Row="2" VerticalAlignment="Top">
-                        <TextBlock Text="上班时间:" Foreground="#FF808080" FontSize="13"/>
+                        <TextBlock Text="上班时间:" Foreground="#FF808080" FontSize="15"/>
                         <TextBlock Text="{Binding Path=DataContext.PrintCardTime,StringFormat=MM-dd HH:mm:ss}"  />
                     </StackPanel>
                 </Grid>
@@ -64,19 +64,22 @@
         </DataTemplate>
     </UserControl.Resources>
     <dxwui:PageAdornerControl  Header="上班管理" ShowBackButton="True" >
-            <dxg:GridControl   Background="Transparent" Margin="0,35,42,0" ShowBorder="False" SelectedItem="{Binding SelectEmployee}" ItemsSource="{Binding Employees}">
-                <!--<dxg:GridControl.Columns>
-                    <dxg:GridColumn FieldName="Name"/>
-                    <dxg:GridColumn FieldName="Phone"/>
-                </dxg:GridControl.Columns>-->
-                <dxg:GridControl.View >
-                    <dxg:CardView Background="Transparent"  IsColumnChooserVisible="False" AutoScrollOnSorting="False" SeparatorThickness="0"
+        <dxg:GridControl   Background="Transparent" Margin="0,35,42,0" ShowBorder="False" SelectedItem="{Binding SelectEmployee}" ItemsSource="{Binding Employees}">
+            <dxmvvm:Interaction.Behaviors>
+                <dxmvvm:EventToCommand PassEventArgsToCommand="True" Command="{Binding ConfirmEmpStatusCommand}" EventName="MouseDoubleClick">
+                    <dxmvvm:EventToCommand.EventArgsConverter>
+                        <dx:EventArgsToDataRowConverter/>
+                    </dxmvvm:EventToCommand.EventArgsConverter>
+                </dxmvvm:EventToCommand>
+            </dxmvvm:Interaction.Behaviors>
+            <dxg:GridControl.View >
+                <dxg:CardView Background="Transparent"  IsColumnChooserVisible="False" AutoScrollOnSorting="False" SeparatorThickness="0"
                                   CardLayout="Columns"  ShowCardExpandButton="False"
                                   ShowColumnHeaders="False" ShowFilterPanelMode="Never" ShowGroupedColumns="False" ShowGroupPanel="False"
                                   SearchPanelHighlightResults="False" ShowSearchPanelMode="Never"
                                   CardHeaderBinding="{Binding Path=Data.Name, RelativeSource={RelativeSource Self}}"
                                   CardTemplate="{StaticResource cardTemplate}"/>
-                </dxg:GridControl.View>
-            </dxg:GridControl>
+            </dxg:GridControl.View>
+        </dxg:GridControl>
     </dxwui:PageAdornerControl>
 </UserControl>
