--- a/HmiPro/DxWindow.xaml
+++ b/HmiPro/DxWindow.xaml
@@ -34,12 +34,14 @@
     </dxmvvm:Interaction.Triggers>
     <dxmvvm:Interaction.Behaviors>
         <dxmvvm:ApplicationJumpListService ShowFrequentCategory="True" ShowRecentCategory="True" />
-        <dx:DialogService DialogWindowStartupLocation="CenterOwner" YieldToParent="True">
+        <dx:DialogService DialogWindowStartupLocation="Manual" YieldToParent="True">
             <dx:DialogService.DialogStyle>
                 <Style TargetType="Window">
                     <Setter Property="SizeToContent" Value="WidthAndHeight" />
                     <Setter Property="ResizeMode" Value="CanResizeWithGrip" />
+                    <Setter Property="Left" Value="0"></Setter>
                 </Style>
+
             </dx:DialogService.DialogStyle>
         </dx:DialogService>
         <dxmvvm:NotificationService x:Name="AppNotificationService" UseWin8NotificationsIfAvailable="False" PredefinedNotificationDuration="Long" PredefinedNotificationTemplate="ShortHeaderAndTwoTextFields"   />
